--- a/src/sections/abstract.tex
+++ b/src/sections/abstract.tex
@@ -1,3 +1,3 @@
-Lorem ipsum – псевдо-латинский текст, который используется для веб дизайна, типографии, оборудования,
-и распечатки вместо английского текста для того, чтобы сделать ударение не на содержание,
-а на элементы дизайна.
+В данной статье мы рассмотрим проблему безопасного хранения и передачи токенов доступа между микросервисами.
+Веб-браузер может хранить токены доступа как в локальном хранилище, так и в файлах cookie.
+Мы предлагаем безопасную реализацию хранения и передачи cookie-файлов доступа между микросервисами используя Azure Active Directory, OpenID Connect и ASP .NET Core.
