update manuscript | fix mistakes | remove useless things | simplify several part of manuscript

--- a/src/SecureAzureOIDC.tex
+++ b/src/SecureAzureOIDC.tex
@@ -11,6 +11,7 @@
 \usepackage[pdfpagelabels,hyperindex,colorlinks=true,linkcolor=blue,urlcolor=magenta,citecolor=green]{hyperref}
 \usepackage{graphicx}
 \usepackage{spverbatim}
+\usepackage[russian]{babel}
 \linespread{1.7}
 \emergencystretch=1em
 \emergencystretch=1em
@@ -89,27 +90,27 @@
     \tableofcontents
 
 
-    \section{Definitions}\label{sec:definitions}
+    \section{Определения}\label{sec:definitions}
     \input{sections/definitions}
 
 
-    \section{Statement of the problem}\label{sec:statement-of-the-problem}
+    \section{Проблема}\label{sec:statement-of-the-problem}
     \input{sections/statement_of_the_problem}
 
 
-    \section{Introduction to OpenID Connect}\label{sec:introduction-to-open-id-connect}
+    \section{Знакомство с OpenID Connect}\label{sec:introduction-to-open-id-connect}
     \input{sections/introduction_to_open_id_connect}
 
 
-    \section{Authentication flow}\label{sec:authentication-flow}
+    \section{Аутентификация}\label{sec:authentication-flow}
     \input{sections/authentication_flow}
 
 
-    \section{Refresh token flow}\label{sec:refresh-token-flow}
+    \section{Токен обновления}\label{sec:refresh-token-flow}
     \input{sections/refresh_token_flow}
 
 
-    \section{Conclusions}\label{sec:conclusions}
+    \section{Вывод}\label{sec:conclusions}
     \input{sections/conclusions}
 
     \bibliographystyle{unsrt}
