--- a/src/sections/abstract.tex
+++ b/src/sections/abstract.tex
@@ -1,3 +1,4 @@
 В данной статье мы рассмотрим проблему безопасного хранения и передачи токенов доступа между микросервисами.
 Веб-браузер может хранить токены доступа как в локальном хранилище, так и в файлах cookie.
-Мы предлагаем безопасную реализацию хранения и передачи cookie-файлов доступа между микросервисами используя Azure Active Directory, OpenID Connect и ASP .NET Core.
+Мы предлагаем безопасную реализацию хранения и передачи cookie-файлов между микросервисами, используя
+Azure Active Directory, OpenID Connect и ASP.NET Core.
