--- a/src/sections/conclusions.tex
+++ b/src/sections/conclusions.tex
@@ -1,32 +1,31 @@
-В данной статье мы рассмотрели проблему безопасного хранения и передачи токенов доступа между микросервисами.
-Особое внимание было уделено возможным уязвимостям при передаче токенов доступа, таким как как Cross-Site Scripting (XSS) и Cross-Site Request Forgery (CSRF).
+В данной статье мы рассмотрели проблему безопасного хранения и передачи токена доступа между микросервисами.
+Особое внимание было уделено возможным уязвимостям при передаче токена доступа,
+таким как как Cross-Site Scripting (XSS) и Cross-Site Request Forgery (CSRF).
 
 Для устранения данных уязвимостей необходимо хранить авторизационные токены в файлах cookie, с обязательными
-настройками \texttt{HttpOnly} и \texttt{SameSite} так что значения \texttt{SameSite} должны быть \texttt{Lax} или \texttt{Strict},
-таким образом файлы куки передаются либо на безопасные \texttt{HTTP} методы, либо не передаются вовсе.
+настройками \texttt{HttpOnly} и \texttt{SameSite} так, что значения \texttt{SameSite} должны быть \texttt{Lax}
+или \texttt{Strict}, таким образом файлы куки передаются либо на безопасные \texttt{HTTP} методы, либо не передаются вовсе.
 
-Аутентификация должна быть реализована с использованием протокола OIDC~\cite{siriwardenaOpenid2020, sakimuraOpenid2014}, а Authorization code flow с помощью PKCE~\cite{bradley2015rfc}.
-олее подробно основной принцип работы протокола OIDC описан в главе 2.
+Аутентификация должна быть реализована с использованием протокола OIDC~\cite{siriwardenaOpenid2020, sakimuraOpenid2014},
+а Authorization code flow с помощью PKCE~\cite{bradley2015rfc}.
+Более подробно основной принцип работы протокола OIDC описан в главе 2.
 
-Аутентификация пользователя происходит по протоколу Open ID Connect~\cite{siriwardenaOpenid2020, sakimuraOpenid2014} через Authorization code flow with PKCE~\cite{bradley2015rfc}.
-Подробнее принцип работы протокола Open ID Connect и Authorization code flow with PKCE изложен во главе 2.
+Аутентификация пользователя происходит по протоколу OpenID Connect~\cite{siriwardenaOpenid2020, sakimuraOpenid2014}
+через Authorization code flow with PKCE~\cite{bradley2015rfc}.
+Подробнее принцип работы протокола OpenID Connect и Authorization code flow with PKCE изложен во главе 2.
 
-Так же в работе был предложен механизм аутентификации/авторизации основанный на ASP.NET Web API бекенде и Angular фронтенд приложении
-под единым доменом.
-Таким образом исключается необходимость передачи авторизационных куки на ресурсы под другими доменами.
+Так же в работе был предложен механизм аутентификации/авторизации, основанный на ASP.NET Web API и Angular
+фронтенд-приложении под единым доменом.
+Таким образом исключается необходимость передачи файлов cookie на ресурсы под другим доменом.
 Передача токена доступа на микросервисы происходит по средствам Reverse Proxy YARP~\cite{microsoftYarp2021}, таким образом что
 токен доступа автоматически подставляется в заголовок запроса.
 
-Кроме того, мы предложили механизм обновления токена доступа через классы \texttt{TicketStore}~\cite{microsoftIticketstore2023} и \texttt{HostedService}~\cite{microsoftHostedservice2023}.
-Таким образом, \texttt{TicketStore} проверяет каждый запрос на истечение срока действия токена доступа.
-В случае истечения срока действия токена доступа он обновляется с помощью микросервиса авторизации.
-Хранилище \texttt{TicketStore} также хранит пары токенов доступа и обновления внутри
-\texttt{AuthenticationTicket} entity~\cite{microsoftAuthenticationTicket2023}.
-
-Кроме этого, в работе был предложен механизм обновления токена доступа через реализацию \texttt{TicketStore}~\cite{microsoftIticketstore2023} и \texttt{HostedService}~\cite{microsoftHostedservice2023}.
+Кроме этого, в работе был предложен механизм обновления токена доступа через
+реализацию \texttt{TicketStore}~\cite{microsoftIticketstore2023} и \texttt{HostedService}~\cite{microsoftHostedservice2023}.
 Таким образом, \texttt{TicketStore} отвечает за проверку каждого запроса на истечение срока действия токена доступа.
-В случае истечения срока действия токена доступа, токен доступа обновляется с помощью запроса к эндпоинту сервиса авторизации.
-Также задача \texttt{TicketStore} состоит в сохранении токена доступа и токена обновления, которые являются частью \texttt{AuthenticationTicket}~\cite{microsoftAuthenticationTicket2023}.
+В случае истечения срока действия токена доступа, токен доступа обновляется с помощью запроса к эндпоинту сервера авторизации.
+Также задача \texttt{TicketStore} состоит в сохранении токена доступа и токена обновления, которые являются
+частью \texttt{AuthenticationTicket}~\cite{microsoftAuthenticationTicket2023}.
 Hosted Service необходим для фонового обновления истекающих токенов доступа, чтобы поддерживать сессии пользователей активными.
 
 В статье мы решили проблему безопасного хранения токена доступа и передачи его между микросервисами,
