--- a/src/sections/refresh_token_flow.tex
+++ b/src/sections/refresh_token_flow.tex
@@ -1,15 +1,21 @@
-Реализация обновления токенов пользователей крайне проста.
-Нам нужно создать фоновый сервис~\cite{microsoftHostedservice2023}, который будет каждые несколько минут выбирать из базы данных те сессии, которые скоро истекут,
-затем фоновый сервис должен десериализовать объект \texttt{AuthenticationTicket}~\cite{microsoftAuthenticationTicket2023} у каждой найденой сессии, из десериализованного объекта
-сервис возьмет токен обновления и отправит запрос на сервер авторизации с целью получения новых токенов доступа и обновления.
-Новые токены заменяют старые в объекте \texttt{AuthenticationTicket}, после чего объект нужно заного десериализовать и установить
-уже десериализованный объект в свойство \texttt{Value}.
-Кроме того, в ответе сервера авторизации в поле \texttt{ExpiresAt} будет число, которое говорит о том через какое время (в секундах) истечет токен доступа,
-фоновый сервис должен обновить свойство ExpiresAt у объекта \texttt{UserSessionEntity}UserSessionEntity, добавив к текущему времени полученные секунды.
+Реализация обновления токенов пользователя крайне проста.
+Нам нужно создать фоновый сервис~\cite{microsoftHostedservice2023}, который будет каждые несколько минут выбирать из
+базы данных те сессии, которые скоро истекут,
+затем фоновый сервис должен десериализовать объект \texttt{AuthenticationTicket}~\cite{microsoftAuthenticationTicket2023}
+у каждой найденой сессии, из десериализованного объекта
+сервис возьмет токен обновления и отправит запрос на сервер авторизации с целью получения новых токенов доступа,
+обновления и ID-токена.
+Новые токены заменяют старые в объекте \texttt{AuthenticationTicket}, после чего объект нужно заного сериализовать и
+установить уже сериализованный объект в свойство \texttt{Value}.
+Кроме того, в ответе сервера авторизации в поле \texttt{ExpiresAt} будет число, которое говорит о том через какое время
+(в секундах) истечет токен доступа,
+фоновый сервис должен обновить свойство ExpiresAt у объекта \texttt{UserSessionEntity}UserSessionEntity, добавив
+к текущему времени секунды, полученные из ответа запроса.
 
 Помимо обновления пользовательских сессий, фоновый сервис отвечает за удалений сессий, которые долго не использовались.
-Каждые несколько минут выбираются сессии, их свойства \texttt{DateOfLastAccess} сравнивается с текущем временем, в случае если разница
-между двумя датами больше 3 суток - сессия удаляется.
+Каждые несколько минут выбираются сессии, их свойства \texttt{DateOfLastAccess} сравнивается с текущем временем,
+в случае если разница между двумя датами больше 3 суток - сессия удаляется.
 Каждый раз когда пользователь совершает действие на сайте, свойство \texttt{DateOfLastAccess} обновляется.
 
-Реализация фонового сервиса может быть выполнена в соответствии с приведенными ссылками~\cite{backroundService_2023, configurationBackgroundService_2023}.
+Реализация фонового сервиса может быть выполнена в соответствии с приведенными
+ссылками~\cite{backroundService_2023, configurationBackgroundService_2023}.
