--- a/src/sections/definitions.tex
+++ b/src/sections/definitions.tex
@@ -1,15 +1,19 @@
 \begin{itemize}
-    \item \textbf{Токен доступа (Access Token)} - Это данные, используемые для авторизации на защищенном ресурсе.
-    Чаще всего токен доступа в JWT-формате, то есть в виде нескольких последовательных частей,
-    разделенных точками.
+    \item \textbf{Токен доступа (Access Token)} - Это токен, используемые для авторизации на защищенном ресурсе.
+    Чаще всего токен доступа в JWT-формате, то есть в виде нескольких последовательных частей, разделенных точками.
     Каждая часть содержит base64url-закодированное значение.
-    \item \textbf{Токен обновления (Refresh Token)} - Это данные, используемые для получения новых токенов доступа, когда когда текущий токен
-    доступа становится недействительным или истекает срок его действия.
+    \item \textbf{Токен обновления (Refresh Token)} - Это токен, используемые для получения новых токенов доступа,
+    когда текущий токен доступа становится недействительным или истекает срок его действия.
     Токены обновления выдаются клиенту сервером авторизации.
-    \item \textbf{Владелец ресурса (Resource Owner)} - Субъект, способный предъявить авторизацию для доступа к защищенному ресурсу.
+    \item \textbf{Владелец ресурса (Resource Owner)} - Субъект, способный предъявить токен доступа для получения доступа к
+    защищенному ресурсу.
     Когда владельцем ресурса является человек, его называют конечный пользователь.
-    \item \textbf{Сервер ресурсов (Resource Server)} - Сервер, который хранит защищенные ресурсы и может обрабатывать запросы к этим ресурсам только
-    после проверки наличия соответствующего токена доступа.
+    \item \textbf{Сервер ресурсов (Resource Server)} - Сервер, который хранит защищенные ресурсы и может обрабатывать
+    запросы к этим ресурсам только после проверки наличия соответствующего токена доступа.
+    К примеру если вы реализуете Microsoft OAuth 2.0, то сервером ресурсов будет являться одна из Web API компании Microsoft.
     \item \textbf{Клиент (Client)} - Приложение, выполняющее запросы к защищенным ресурсам.
-    \item \textbf{Сервер авторизации (Authorization Server)} - Сервер, выдающий токены доступа клиенту после успешной аутентификации.
+    Термин не подразумевает каких-либо конкретных характеристик реализации, клиентом может быть как сервер, так десктоп
+    приложение и так далее.
+    \item \textbf{Сервер авторизации (Authorization Server)} - Сервер, выдающий токен доступ клиенту после
+    успешной аутентификации.
 \end{itemize}
